--- a/src/app.css
+++ b/src/app.css
@@ -5,25 +5,45 @@
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
 	--pure-white: #ffffff;
-	--primary-color: #b9c6d2;
-	--secondary-color: #d0dde9;
-	--tertiary-color: #edf0f8;
-	--bold-color: #1b9aaa;
+	--primary-color: #e5d1d1;
+	--secondary-color: #ebdbdb;
+	--tertiary-color: #f8eded;
+	--bold-color: #aa1b1b;
 	--accent-color: #ff3e00;
 	--paragraph-color: rgba(3, 2, 2, 0.7);
 	--text-color: #444444;
 	--background-without-opacity: rgba(255, 255, 255, 0.7);
 	--column-width: 42rem;
 	--column-margin-top: 4rem;
+
+	--hover-color: #fff6f5;
+	--text-hover-color: #ff9896;
+
+	--background-white: #fffbf0;
+	--background-extra-light: #f0c5c5;
+	--background-light: #e46b6b;
+	--background-medium: #b73a3a;
+	--background-less-dark: #a72222;
+	--background-dark: #981C1D;
+	--background-extra-dark: #7f0304;
+
+	/* table colors */
+	--table-header-color: #f36c6c;
+	--table-color-1: #ffbcbc;
+	--table-color-2: #facbcb;
+
+	--button-color: #981C1D;
+	--selection-color: #c0abdd;
+
 }
 
 ::-moz-selection {
-	background-color: #abddbc;
+	background-color: var(--selection-color);
 	color: black;
 }
 
 ::selection {
-	background-color: #abddbc;
+	background-color: var(--selection-color);
 	color: black;
 }
 
@@ -136,7 +156,7 @@ button:focus:not(:focus-visible) {
 }
 
 .topbuttons {
-	background-color: #981C1D;
+	background-color: var(--button-color);
 	border-radius: 50px;
 	padding: 10px 20px;
 	margin: 5px;
@@ -146,7 +166,7 @@ button:focus:not(:focus-visible) {
 }
 
 .compbuttons {
-	background-color: #981C1D;
+	background-color: var(--button-color);
 	border-radius: 50px;
 	padding: 10px 20px;
 	margin: 5px;
@@ -173,16 +193,16 @@ button:focus:not(:focus-visible) {
 
 .sign-up {
 	margin-bottom: 5px;
-	border: 2px solid lightgreen;
+	border: 2px solid rgb(255, 255, 255, 0.7);
 	border-radius: 10px;
 	background-color: transparent;
 	outline: none;
 	padding: 10px 20px;
 	font-size: 15px;
 	cursor: pointer;
-	color: rgb(255, 255, 255, 0.6);
+	color: rgb(255, 255, 255, 0.7);
 }
 
 .sign-up:hover {
-	background-color: rgb(68, 162, 77);
+	background-color: var(--background-extra-dark);
 }
