--- a/src/app.css
+++ b/src/app.css
@@ -8,6 +8,7 @@
 	--primary-color: #e5d1d1;
 	--secondary-color: #ebdbdb;
 	--tertiary-color: #f8eded;
+	--heading-color: #651010;
 	--bold-color: #aa1b1b;
 	--accent-color: #ff3e00;
 	--paragraph-color: rgba(3, 2, 2, 0.7);
