--- a/src/app.css
+++ b/src/app.css
@@ -22,7 +22,7 @@
   --tertiary-color: #f8eded;
   --heading-color: #651010;
   --bold-color: #aa1b1b;
-  --accent-color: #ff3e00;
+  --accent-color: #dc7291;
   --paragraph-color: rgba(3, 2, 2, 0.7);
   --text-color: #444444;
   --background-without-opacity: rgba(255, 255, 255, 0.7);
